--- a/Css/style.css
+++ b/Css/style.css
@@ -1,12 +1,11 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
     font-style: normal;
 }
 
-body{
+body {
     overflow-y: scroll !important;
     scrollbar-color: #F6A317 #ffffff !important;
 
@@ -14,18 +13,18 @@ body{
 
 
 
-.container{
+.container {
     padding: 0px 67px;
 }
 
-.site-link{
+.site-link {
     text-decoration: none;
 }
 
 
 /* debut de style d'entête */
 
-.navbar{
+.navbar {
     height: 97px;
     background-color: #ffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
@@ -35,26 +34,27 @@ body{
     position: fixed;
     left: 0;
     right: 0;
-    z-index: 9999; /* Permet de mettre le nav au dessus de tous les autres éléments sur la page*/
+    z-index: 9999;
+    /* Permet de mettre le nav au dessus de tous les autres éléments sur la page*/
 }
 
-.group-link{
+.group-link {
     display: flex;
     gap: 50px;
 }
 
-.group-link li{
-list-style: none;
+.group-link li {
+    list-style: none;
 }
 
-.group-link li a{
+.group-link li a {
     font-weight: 500px;
-    font-style: normal;    
+    font-style: normal;
     font-size: 22px;
     color: #204B9B;
 }
 
-.nav-button{
+.nav-button {
     width: 172px;
     height: 49px;
     color: #ffff;
@@ -72,18 +72,20 @@ list-style: none;
 
 /* Début de style section 1 */
 
-.section1{
+.section1 {
     padding-top: 165px;
 }
-.section1-row1{
+
+.section1-row1 {
     display: flex;
     justify-content: space-between;
 }
-.col1{
+
+.col1 {
     width: 598.78px;
 }
 
-.section1-row1 div h1{
+.section1-row1 div h1 {
     color: #204B9B;
     font-size: 78px;
     font-style: normal;
@@ -94,7 +96,7 @@ list-style: none;
     margin-bottom: 31px;
 }
 
-.section1-row1 div p{
+.section1-row1 div p {
     font-size: 25px;
     color: #171614;
     font-style: normal;
@@ -109,7 +111,7 @@ list-style: none;
 
 }
 
-.section1-row1 div a{
+.section1-row1 div a {
     width: 218px;
     height: 63px;
     color: #ffff;
@@ -124,132 +126,139 @@ list-style: none;
     text-decoration: none;
 }
 
-.section1-row1 .col2{
+.section1-row1 .col2 {
     margin-right: 62px;
 }
 
 /* Fin de style section 1 */
 
-.mobile-button{
+.mobile-button {
     display: none;
 }
 
 .bloc {
-  width:2500px ;
-  height: 1000px; 
-  background-color:  #204B9B; 
-  margin: auto;
+    width: 2500px;
+    height: 1000px;
+    background-color: #204B9B;
+    margin: auto;
 }
+
 /* Début de style:  responsivité */
 
 @media screen and (max-width: 426px) {
     .group-link {
         display: none;
     }
+
     .site-link-nav-button {
-    display: none;
-}
+        display: none;
+    }
 
-.navbar{
-    justify-content: center;
-}
+    .navbar {
+        justify-content: center;
+    }
 
-.navbar .logo{
-   display: flex;
-   justify-content: end;
-}
- 
-.nav-icon{
-    display: contents;
-    font-size: 2em;
-}
+    .navbar .logo {
+        display: flex;
+        justify-content: end;
+    }
 
-.navbar .logo img{
-    width: 70%;
-   
-}
+    .nav-icon {
+        display: contents;
+        font-size: 2em;
+    }
 
-.section1  .section1-row1{
-   flex-direction: column;
-   align-items: center;
-   text-align: center;
-   width: 100%;
+    .navbar .logo img {
+        width: 70%;
 
-}  
+    }
 
-.section1  .section1-row .col1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
+    .section1 .section1-row1 {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 100%;
 
-.section1-row1 div h1{
-    text-align: center;
-    font-size: 30px;
-    
-}
-.section1  .section1-row .col2{
-    justify-content: center;
-    flex-direction: column; 
+    }
 
-}
-.section1  .section1-row .col2{
-   
-    width: 100%;
-    margin: 0;
-    /* margin-top: 100%; */
-    /* overflow: hidden; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}.section1  .section1-row .col2 img{
-    width: 100%;
-}
+    .section1 .section1-row .col1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
 
-.container{
-    padding: 0px 20px;
-}
+    .section1-row1 div h1 {
+        text-align: center;
+        font-size: 30px;
 
-.section1{
-    padding-top: 145px;
-}
+    }
 
-.section1-row1 div p{
-    text-align: center;
-    font-size: 15px;
-}
+    .section1 .section1-row .col2 {
+        justify-content: center;
+        flex-direction: column;
 
-.section1-row1 div a{
-    font-size: 15px;
-    border-radius: 30px;
-    display: flex;
-    justify-content: center;
-    width: 150px;
-    height: 45px;
-    
-}
-.section1-row1 div a{
-    position: relative;
-    left: 90px;
-}
-.col2{
-    width: -47%;
-    margin-top: 20px;
-    position: relative;
-    left: 30px;
-    
+    }
 
-}
-header nav div i{
-    color: #204B9B;
-    margin: 20px;
-}
-.col1{
-    width:100%;
-}
-    
-}
+    .section1 .section1-row .col2 {
+
+        width: 100%;
+        margin: 0;
+        /* margin-top: 100%; */
+        /* overflow: hidden; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .section1 .section1-row .col2 img {
+        width: 100%;
+    }
+
+    .container {
+        padding: 0px 20px;
+    }
+
+    .section1 {
+        padding-top: 145px;
+    }
+
+    .section1-row1 div p {
+        text-align: center;
+        font-size: 15px;
+    }
+
+    .section1-row1 div a {
+        font-size: 15px;
+        border-radius: 30px;
+        display: flex;
+        justify-content: center;
+        width: 150px;
+        height: 45px;
+
+    }
+
+    .section1-row1 div a {
+        position: relative;
+        left: 90px;
+    }
+
+    .col2 {
+        width: -47%;
+        margin-top: 20px;
+        position: relative;
+        left: 30px;
 
 
+    }
 
+    header nav div i {
+        color: #204B9B;
+        margin: 20px;
+    }
+
+    .col1 {
+        width: 100%;
+    }
+
+}
